fix(website): fix header in dark mode, enable matomo tracking

--- a/website/src/components/HomepageFeatures/styles.module.css
+++ b/website/src/components/HomepageFeatures/styles.module.css
@@ -5,7 +5,7 @@
   width: 100%;
 }
 
-.featureSvg {
-  height: 200px;
-  width: 200px;
+.h64 {
+  height: 64px;
 }
+
